# fastapi_camera_stream

./: README.md  client.py  pyproject.toml  server.py
routes/: camera_routes.py  websocket_routes.py
utils/: baslor_cam.py  camera_states.py  connection_manager.py  dependencies.py
